[package]
name = "abs_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "x86_64-abs_os.json"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
