[package]
name = "abs_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "x86_64-abs_os.json"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
linked_list_allocator = "0.9.0"
pc-keyboard = "0.5.0"
pic8259 = "0.10.1"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial", "stdio",
	"-display", "none"]
test-success-exit-code = 33	# (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
